--- a/Corrida_Da_Fisica_Web/pubspec.yaml
+++ b/Corrida_Da_Fisica_Web/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,9 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/basic_board.png
     - assets/images/rules/
+    - assets/images/icons/
   fonts:
      - family: SourceSansPro
        fonts:
