Added how to connect page

--- a/Corrida_Da_Fisica_Web/pubspec.yaml
+++ b/Corrida_Da_Fisica_Web/pubspec.yaml
@@ -64,6 +64,7 @@ flutter:
   assets:
     - assets/images/
     - assets/images/basic_board.png
+    - assets/images/join_instructions/
     - assets/images/rules/
     - assets/images/icons/
     - assets/images/dice/
