--- a/corrida_da_fisica_mobile/pubspec.yaml
+++ b/corrida_da_fisica_mobile/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
+  flutter_svg: ^2.0.5
 
 dev_dependencies:
   flutter_test:
@@ -73,6 +74,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/svg/
     - assets/images/rules/
     - assets/images/profile/
     - assets/images/team/
