--- a/Corrida_Da_Fisica_Web/pubspec.yaml
+++ b/Corrida_Da_Fisica_Web/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   flutter_svg: ^1.1.6
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
