--- a/back_end/package.json
+++ b/back_end/package.json
@@ -4,8 +4,13 @@
     "description": "Application Description",
     "main": "server.js",
     "scripts": {
-      "start": "node server.js"
+        "start": "node server.js",
+        "devStart": "nodemon server.js"
     },
     "dependencies": {
+        "express": "^4.18.2"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.22"
     }
-  }
+}
