--- a/corrida_da_fisica_mobile/pubspec.yaml
+++ b/corrida_da_fisica_mobile/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.5
   flutter_svg: ^2.0.5
+  getwidget: ^2.0.4
 
 dev_dependencies:
   flutter_test:
