--- a/Corrida_Da_Fisica_Web/pubspec.yaml
+++ b/Corrida_Da_Fisica_Web/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.5
   flutter_svg: ^1.1.6
   percent_indicator: ^4.2.3
+  universal_html: ^2.2.2
 
 dev_dependencies:
   flutter_test:
