--- a/corrida_da_fisica_mobile/pubspec.yaml
+++ b/corrida_da_fisica_mobile/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.0.5
   flutter_svg: ^2.0.5
   getwidget: ^2.0.4
+  eventsource: ^0.4.0
 
 dev_dependencies:
   flutter_test:
