--- a/Corrida_Da_Fisica_Web/pubspec.yaml
+++ b/Corrida_Da_Fisica_Web/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_svg: ^1.1.6
   percent_indicator: ^4.2.3
   universal_html: ^2.2.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
