--- a/back_end/package.json
+++ b/back_end/package.json
@@ -8,6 +8,7 @@
         "devStart": "nodemon server.js"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.18.2"
     },
     "devDependencies": {
