--- a/corrida_da_fisica_mobile/pubspec.yaml
+++ b/corrida_da_fisica_mobile/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.0.5
   getwidget: ^2.0.4
   eventsource: ^0.4.0
+  universal_html: ^2.2.2
+  http: ^0.13.6
 
 dev_dependencies:
   flutter_test:
