--- a/corrida_da_fisica_mobile/pubspec.yaml
+++ b/corrida_da_fisica_mobile/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   provider: ^6.0.5
   flutter_svg: ^2.0.5
   getwidget: ^2.0.4
+  universal_html: ^2.2.2
+  http: ^0.13.6
+  flutter_client_sse: ^1.0.0
 
 dev_dependencies:
   flutter_test:
