--- a/Corrida_Da_Fisica_Web/pubspec.yaml
+++ b/Corrida_Da_Fisica_Web/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   percent_indicator: ^4.2.3
   universal_html: ^2.2.2
   http: ^0.13.5
+  firebase_core: ^2.13.1
 
 dev_dependencies:
   flutter_test:
