--- a/corrida_da_fisica_mobile/pubspec.yaml
+++ b/corrida_da_fisica_mobile/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   universal_html: ^2.2.2
   http: ^0.13.6
   flutter_client_sse: ^1.0.0
+  firebase_core: ^2.13.1
 
 dev_dependencies:
   flutter_test:
